fix: truncate replying to message text preview

--- a/src/gui/scss/core/_helpers.scss
+++ b/src/gui/scss/core/_helpers.scss
@@ -183,4 +183,12 @@ font-weight: 900;
 
 .items-end {
     align-items: flex-end;
-  }
+}
+
+.truncate {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
